off console.log

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,8 +10,7 @@
 
 <body class="bg-light">
 
-    <div class="container py-5">
-
+    <div class="container py-5"></div>        
         <header class="text-center mb-5">
             <h1 class="fw-bold">API de Notícias</h1>
             <p class="text-muted">A API permite buscar, inserir, atualizar e excluir notícias armazenadas no MongoDB
